Working on frontend with HTML & CSS

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -11,5 +11,16 @@
   </head>
   <body>
     <h1>Weather App ☁️</h1>
+    <div class="location">
+      <h1 class="location-timezone">Timezone</h1>
+      <p>Icon</p>
+    </div>
+    <div class="temperature">
+      <div class="degree-section">
+        <h2 class="temperature-degree">34</h2>
+        <span>F</span>
+      </div>
+      <div class="temperature-description">It's friggin cold</div>
+    </div>
   </body>
 </html>
