--- a/speed-typing-app/index.html
+++ b/speed-typing-app/index.html
@@ -12,7 +12,7 @@
     <div class="timer" id="timer">0</div>
     <div class="container">
       <div class="quote-display" id="quoteDisplay">quote</div>
-      <textarea id="quoteInput" class="quote-input" autofocus>quote</textarea>
+      <textarea class="quote-input" id="quoteInput" autofocus>quote</textarea>
     </div>
   </body>
 </html>
