--- a/speed-typing-app/index.html
+++ b/speed-typing-app/index.html
@@ -9,10 +9,10 @@
     <title>Speed Typing</title>
   </head>
   <body>
-    <div class="timer" id="timer">0</div>
+    <div class="timer" id="timer"></div>
     <div class="container">
-      <div class="quote-display" id="quoteDisplay">quote</div>
-      <textarea class="quote-input" id="quoteInput" autofocus>quote</textarea>
+      <div class="quote-display" id="quoteDisplay"></div>
+      <textarea class="quote-input" id="quoteInput" autofocus></textarea>
     </div>
   </body>
 </html>
