--- a/drag-and-drop-vanillaJS/index.html
+++ b/drag-and-drop-vanillaJS/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>DragnDrop</title>
   </head>
-  <body></body>
+  <body>
+    <div class="empty">
+      <div class="fill" draggable="true"></div>
+    </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
